
libHX 1.25 (September 07 2008)
==============================
- install missing misc.h
- HXmc: pointer was not automatically updated after hmc_trunc()
- HXmc: rename functions and put them into the HX* namespace (API change)
- HXmc: HXmc_strcpy(hxmc, NULL) will no longer free the mc but act like
  HXmc_strcpy(hxmc, "")
- HXmc: make code resistant to memory allocation failure


libHX 1.23 (September 02 2008)
==============================
- code cleanup: misc.h has been split off libHX.h
- add defs.h


libHX 1.22 (July 16 2008)
=========================
- need to use lstat() on directory operations such as mkdir and rrmdir
- use RTLD_LAZY when opening dynamic libraries
- add libxml_helper


libHX 1.18 (June 10 2008)
=========================
- implement reverse iterating through HXlist
- remove deprecated HXlist_init_head() and HXclist_init_head()
  [replaced by HXlist_init() and HXclist_init()]
- added HX_ffs()


libHX 1.17 (May 08 2008)
========================
- HXlist: added HXlist_for_each_safe, HXlist_for_each_entry_safe
- HXclist: added HXclist_del


libHX 1.15 (April 04 2008)
==========================
- HXformat: add %(ifempty) and %(ifnempty) tags
- libHX.h: split into {arbtree,deque,option,string}.h (and libHX.h)
- Add inline-doubly-linked-list data structures


libHX 1.10.2 (December 06 2007)
===============================
- [r105]: pass up NULL from memory allocation error
- [r108]: only return success on EEXIST when HXF_KEEP was given
- [r112]: HX_dirname() incorrectly computed the path


libHX 1.10.1 (September 17 2007)
================================
- [r96]: Fix output of line-wrapped help text
- tarball: in libHX 1.10.0 I forgot to provide the configure - sorry
  (but you could regenerate it using ./autogen.sh if you have autotools)