@@ -7,7 +7,7 @@ lib_LTLIBRARIES  = libHX.la
 libHX_la_SOURCES = arbtree.c deque.c dir.c dl.c format.c mc.c opt.c other.c \
                    rand.c string.c
 libHX_la_LIBADD  = ${regular_LIBS}
-libHX_la_LDFLAGS = -version-info 14:0:0
+libHX_la_LDFLAGS = -version-info 15:0:1
 
 noinst_PROGRAMS    = tc-compile tx-compile
 noinst_PROGRAMS   += tc-arbtree tx-arbtree
