@@ -48,6 +48,7 @@ enum {
 };
 
 extern int HX_ffs(unsigned long);
+extern void HX_hexdump(FILE *, const void *, unsigned int);
 extern void HX_zvecfree(char **);
 extern int HX_fsystem(unsigned int, const char *, const char *, ...);
 extern int HX_vfsystem(unsigned int, const char *, const char *, va_list);
